--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "grunt-contrib-concat": "^0.3.0",
     "grunt-contrib-copy": "^0.4.1",
     "grunt-contrib-jshint": "^0.4.3",
-    "grunt-contrib-less": "~0.11.0",
     "grunt-contrib-uglify": "^0.2.7",
     "grunt-contrib-watch": "^0.4.4",
     "grunt-conventional-changelog": "^0.1.2",
     "grunt-html2js": "^0.1.9",
     "grunt-karma": "^0.8.2",
     "grunt-ngmin": "0.0.2",
+    "grunt-sass": "^0.14.0",
     "karma": "^0.12.9",
     "karma-coffee-preprocessor": "^0.2.1",
     "karma-jasmine": "^0.1.5",
