--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "connect-livereload": "^0.4.0",
     "grunt": "~0.4.1",
     "grunt-bump": "0.0.6",
     "grunt-coffeelint": "~0.0.10",
     "grunt-contrib-clean": "^0.4.1",
     "grunt-contrib-coffee": "^0.7.0",
     "grunt-contrib-concat": "^0.3.0",
+    "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-copy": "^0.4.1",
     "grunt-contrib-jshint": "^0.4.3",
     "grunt-contrib-uglify": "^0.2.7",
