--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt": "~0.4.1",
     "grunt-bump": "0.0.6",
     "grunt-coffeelint": "~0.0.10",
+    "grunt-connect-rewrite": "^0.2.1",
     "grunt-contrib-clean": "^0.4.1",
     "grunt-contrib-coffee": "^0.7.0",
     "grunt-contrib-concat": "^0.3.0",
